--- a/wiki/Overview.wiki
+++ b/wiki/Overview.wiki
@@ -1,4 +1,4 @@
-The following is a list of options for VoidStats when executing from the command line:
+The following is a list of options for VoidStats when executing as a jar from the command line:
 
 {{{
 $ java -jar voidstats-0.1-dev.jar 
@@ -19,3 +19,5 @@ usage: voidstats
 }}}
 
 VoidStats uses on-disk storage in the form of temporary files as default.  However, if the dataset is not too large then in-memory (-im) may be specified.  In-memory will be approx. ??? faster and typically can be used on datasets with up to ??? triples, however this will vary depending on how much memory is available on your system and how many class/property partitions need to be created.
+
+The latest jar can be found in the svn repository
