--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -27,5 +27,5 @@ VoidStats uses on-disk storage in the form of temporary files as default.  Howev
 The latest jar can be found in the [https://voidstats.googlecode.com/svn/trunk/ svn repository].  Below is an example of a command which analyses a dataset containing 116 million triples.  It took ??? hours in total, ??? hours to sort the data and ??? hours to run the statistics.
 
 {{{
-$ java -Xmx2500M -jar voidstats-0.1-dev.jar -i pubData_unSorted.nq.gz -s out/pubData_sorted.nq.gz -d pubData -o out/pubData_out.log -igz -pp -cp 2> out/pubData.err.log
+$ java -Xmx2500M -jar voidstats-0.1-dev.jar -i pubData_unSorted.nq.gz -s out/pubData_sorted.nq.gz -d pubData -o out/pubData_void.log -igz -pp -cp 2> out/pubData.err.log
 }}}
